conquiz_backend/K8S/accounts-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: accountnpservice-srv
spec:
  type: NodePort
  selector:
    app: accountservice
  ports:
    - name: accountservice
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: accounts-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: accountservice
  ports:
  - name: accountservice
    protocol: TCP
    port: 80
    targetPort: 80
