conquiz_backend/K8S/games-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: games-depl
  annotations:
    keel.sh/policy: force     # update policy (available: patch, minor, major, all, force)
    keel.sh/trigger: poll     # enable active repository checking (webhooks and GCR would still work)
    keel.sh/pollSchedule: "@every 30m"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gameservice
  template:
    metadata:
      labels:
        app: gameservice
    spec:
      containers:
        - name: gameservice
          image: boostedpenguin/gameservice:latest
          imagePullPolicy: Always            
---
apiVersion: v1
kind: Service
metadata:
  name: games-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: gameservice
  ports:
  - name: gameservice
    protocol: TCP
    port: 80
    targetPort: 80
