conquiz_backend/K8S/games-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: gamenpservice-srv
spec:
  type: NodePort
  selector:
    app: gameservice
  ports:
    - name: gameservice
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: games-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: gameservice
  ports:
  - name: gameservice
    protocol: TCP
    port: 80
    targetPort: 80
