conquiz_backend/K8S/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - http:
        paths:
          - path: /api/account
            pathType: Prefix
            backend:
              service:
                name: accounts-clusterip-srv
                port:
                  number: 80
          - path: /api/example
            pathType: Prefix
            backend:
              service:
                name: games-clusterip-srv
                port:
                  number: 80
